# transcription-app

./: docker-compose.yml  plan.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/src/api/: dependencies.py  router.py  schemas.py
backend/src/application/ports/: midi_processor.py  sheet_music_generator.py  transcriber.py
backend/src/application/usecases/: simplify_music.py  transcribe_music.py
backend/src/core/: config.py  exceptions.py
backend/src/domain/: entities.py  simplification.py  transcription.py
backend/src/infrastructure/: basic_pitch_transcriber.py  music21_generator.py  pretty_midi_processor.py
backend/tests/api/: test_router.py
backend/tests/domain/: test_entities.py  test_simplification.py  test_transcription.py
backend/tests/usecases/: test_simplify_music.py  test_transcribe_music.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: DifficultySelector.tsx  FileUpload.tsx  PianoPlayer.tsx  ProcessingIndicator.tsx  SheetMusicViewer.tsx
frontend/lib/: api.ts  midi.ts
frontend/stores/: useAppStore.ts
